<resources>
    <string name="app_name">Currency calculator</string>
    <string name="title_prevody">Conversions</string>
    <string name="title_kurzy">Rates</string>
    <string name="title_vybermeny">Currency selection</string>
    <string name="search_currency">Search currency</string>
    <string name="konverzny_kurz">Conversion rate</string>
    <string name="favorites">Favourites</string>
    <string name="other">Other</string>
    <string name="currency_detail">Currency detail</string>
    <string name="iso_4217_id">ISO 4217 ID: </string>
    <string name="slovak_name">Slovak name: </string>
    <string name="english_name">English name: </string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="price_to_eur">Value (relative to 1 EUR): </string>
    <string name="last_update">Last update: </string>
    <string name="historical_trend">Historical development of value</string>
    <string name="historical_trend_sub">for the last 3 months</string>
    <string name="connection_error">Internet connection is not available, app goes offline</string>
    <string name="loading_data">Loading data</string>
    <string name="empty_tab_header">Data is empty</string>
    <string name="empty_tab_message">Due to missing data and no internet connection available, application cannot work in offline mode.</string>
    <string name="empty_tab_accept">Close the application</string>
    <string name="pick">Pick</string>
    <string name="no_selected_curr">No currency selected</string>
    <string name="swap">Swap</string>
</resources>