<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/currency_detail"
        android:id="@+id/detailToolbar"
        >

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/detailToolbar"
        android:id="@+id/detailKarta"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:padding="10dp">
            <TableRow>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_to_eur"/>
                <TextView
                    android:id="@+id/valueTw"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iso_4217_id"/>
                <TextView
                    android:id="@+id/isoTw"

                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text=""/>
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="5dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slovak_name"/>
                <TextView
                    android:id="@+id/slovakTw"

                    android:padding="5dp"
                    android:textStyle="bold"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vybermeny"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="5dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english_name"/>
                <TextView
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:id="@+id/englishTw"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vybermeny"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"/>
                <TextView
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:id="@+id/lastUpTw"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vybermeny"/>
            </TableRow>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/favCb"
                android:text="@string/mark_as_favourite">

            </com.google.android.material.checkbox.MaterialCheckBox>
        </TableLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:id="@+id/valueNadpisTw"
        android:text="@string/historical_trend"
        app:layout_constraintTop_toBottomOf="@id/detailKarta">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Display1"
        android:textSize="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:id="@+id/valuePodnadpisTw"
        android:text="@string/historical_trend_sub"
        app:layout_constraintTop_toBottomOf="@id/valueNadpisTw">
    </TextView>
    <com.github.mikephil.charting.charts.LineChart
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/detailChart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valuePodnadpisTw">

    </com.github.mikephil.charting.charts.LineChart>

</androidx.constraintlayout.widget.ConstraintLayout>